--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplicationTest"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".App">
         <activity
             android:name=".AboutAuthorActivity"
             android:exported="false">
@@ -39,6 +40,8 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <service android:name=".GameService" />
+
     </application>
 
 </manifest>
