--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,14 @@
         tools:targetApi="31"
         android:name=".App">
         <activity
-            android:name=".AboutAuthorActivity"
+            android:name=".activities.AboutAuthorActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainGameActivity"
+            android:name=".activities.MainGameActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
